--- a/templates/charts.html
+++ b/templates/charts.html
@@ -32,7 +32,7 @@
     <a target="_blank" href="../static/images/cap shape.png">
       <img src="../static/images/cap shape.png" alt="Cap Shapes">
     </a>
-    <p>Mushrooms with Sunken and Conical cap shapes are always edible</p>
+    <p>Mushrooms with Conical cap shapes are always poisonous and Sunken cap shapes are always edible.</p>
         </article>
 
 
